# blind-psychic-assassin

./: .gitignore  README  configure.ac
src/: Makefile.am  bsa.c  common.h  floor.c  floor.h  main.c  model.c  model.h  person.c  person.h  weapon.c  weapon.h
